--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,15 @@
 	<build>
 		<plugins>
 			<plugin>
+                           <groupId>org.apache.maven.plugins</groupId>
+                           <artifactId>maven-compiler-plugin</artifactId>
+                           <version>3.8.8</version> <!-- Change the version to 3.8.1 -->
+                           <configuration>
+                             <source>17</source>
+                             <target>17</target>
+                           </configuration>
+                        </plugin>
+			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
